Inserite classi Contatto, Crea contatto e modificato main e aggiungi attività

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="inserisci_data">Inserisci Data</string>
     <string name="inserisci_attivita">Inserisci Attivita</string>
     <string name="conferma">Conferma</string>
+    <string name="contatti">Contatti</string>
+    <string name="attivit">Attività</string>
+    <string name="aggiungi">Aggiungi</string>
+    <string name="nome">Nome:</string>
+    <string name="cognome">Cognome:</string>
 </resources>
