Aggiunta Activity Attività in corso.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="rossi">Rossi</string>
     <string name="_1122334455">1122334455</string>
     <string name="mario_example_com">mario@example.com</string>
+    <string name="attivit_in_corso">Attività In Corso</string>
 </resources>
