Aggiunta activity Impegni

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="gg_mm_aaaa">gg/mm/aaaa</string>
     <string name="salva_attivita">Salva</string>
     <string name="scade_il">Scade il:</string>
+    <string name="impegni">Impegni</string>
 </resources>
